miniextendr-macros/tests/ui/derive_dataframe_name_non_string.stderr
error: expected string literal for `name`
 --> tests/ui/derive_dataframe_name_non_string.rs:6:20
  |
6 | #[dataframe(name = 123)]
  |                    ^^^
